# projet-inf1015

./: Arguments.cpp  CMakeLists.txt  Exercices.sln  Exercices.vcxproj  README.md  main.cpp
Exercises/: CMakeLists.txt  Exercises.vcxproj  Exercises.vcxproj.filters  main.cpp
doc/: Classroom.md  Vcpkg.md
settings/: files_to_update.txt
src/: Actions.h  CMakeLists.txt  Constants.cpp  Constants.h  Direction.cpp  Direction.h  Exceptions.h  Exercises.vcxproj  Exercises.vcxproj.filters  Game.cpp  Game.h  Item.cpp  Item.h  ItemTaker.h  LevelManager.cpp  LevelManager.h  Lookable.h  Player.cpp  Player.h  Taking.h  Tile.cpp  Tile.h  TileMap.cpp  TileMap.h  main.cpp
